// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It reorders lists when their children of list-items 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Bullet 1",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Bullet 2",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "text": "Nested 1 Bullet 1",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "list-item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "text": "Nested 1 Bullet 2",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "list-item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "text": "Nested 2 Bullet 1",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "list-item",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "text": "Nested 2 Bullet 2",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "list-item",
              },
            ],
            "type": "bulleted-list",
          },
        ],
        "type": "bulleted-list",
      },
    ],
    "type": "bulleted-list",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Bullet 1",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Bullet 2",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "text": "Nested 1 Bullet 1",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "list-item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "text": "Nested 1 Bullet 2",
                  },
                ],
                "type": "paragraph",
              },
            ],
            "type": "list-item",
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "text": "Nested 2 Bullet 1",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "list-item",
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "text": "Nested 2 Bullet 2",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "list-item",
              },
            ],
            "type": "numbered-list",
          },
        ],
        "type": "numbered-list",
      },
    ],
    "type": "numbered-list",
  },
]
`;

exports[`It works when flattenListItems is true 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "text": "Bullet 1",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "text": "Bullet 2",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Nested 1 Bullet 1",
              },
            ],
            "type": "list-item",
          },
          Object {
            "children": Array [
              Object {
                "text": "Nested 1 Bullet 2",
              },
            ],
            "type": "list-item",
          },
        ],
        "type": "bulleted-list",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Nested 2 Bullet 1",
              },
            ],
            "type": "list-item",
          },
          Object {
            "children": Array [
              Object {
                "text": "Nested 2 Bullet 2",
              },
            ],
            "type": "list-item",
          },
        ],
        "type": "bulleted-list",
      },
    ],
    "type": "bulleted-list",
  },
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "text": "Bullet 1",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "text": "Bullet 2",
          },
        ],
        "type": "list-item",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Nested 1 Bullet 1",
              },
            ],
            "type": "list-item",
          },
          Object {
            "children": Array [
              Object {
                "text": "Nested 1 Bullet 2",
              },
            ],
            "type": "list-item",
          },
        ],
        "type": "numbered-list",
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "text": "Nested 2 Bullet 1",
              },
            ],
            "type": "list-item",
          },
          Object {
            "children": Array [
              Object {
                "text": "Nested 2 Bullet 2",
              },
            ],
            "type": "list-item",
          },
        ],
        "type": "numbered-list",
      },
    ],
    "type": "numbered-list",
  },
]
`;
